--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch ./src/index.js"
+    "dev": "node --env-file .env --watch ./src/index.js"
   },
   "keywords": [],
   "author": "Mathias Lopez <mathiaschef23@gmail.com>",
@@ -11,6 +11,7 @@
   "description": "BackEnd: API DarkBasementStudio",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
