--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "dev": "node --env-file .env --watch ./src/index.js"
+    "dev": "node --env-file .env --watch ./src/bin/www.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "Mathias Lopez <mathiaschef23@gmail.com>",
@@ -12,8 +13,14 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
   }
 }
